--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-streamlit
-opencv-python
-Pillow
-numpy
-pandas
-ultralytics
-torch
-onnxruntime
-add-trailing-comma
-altair
-watchdog
+streamlit==1.24.1
+opencv-python==4.11.0.86
+numpy==1.26.4
+Pillow==9.5.0
+PyYAML==6.0.2
+torch==2.7.1
+ultralytics==8.3.152
+onnxruntime==1.19.2
+pandas==2.3.0
